--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^1.7.4"
+    "prettier": "1.10.2"
   },
   "prettier": {
     "semi": false,
