--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "change-case": "^3.0.1",
     "husky": "^0.14.3",
     "lint-staged": "^6.1.0",
     "node-sass-chokidar": "0.0.3",
